# CommandPro

./: .editorconfig  .gitignore  AlphaFold2.ipynb  CMakeLists.txt  LICENSE  README.md  repl.py  test.comp
include/: ast.h  errors.h  lexer.h  parser.h  serializer.h  token.h
lang-test/: Conditionals.csc  ai_tests.csc  all_in_one_tests.csc  controll_statements.csc  controllflow.csc  datatype_test.csc  function_test.csc  input_output_test.csc  keyboard_test.csc  mouse_test.csc  object_oriented.csc  time_schedulling.csc  try_catch_test.csc  vars_and_expressions.csc  window_management_test.csc
python/: __init__.py  ast_executor.py  ast_nodes.py  errors.py  executor.py  lexer.py  main.py  old.py  parser.py  random_test.py  repl.py
python/utils/: __init__.py  mouse_manager.py  window_manager.py
src/: lexer.c  main.c  token.c
tests/: conftest.py  control_flow_test.py  new_test.py  random_test.py  test_advanced_features.py  test_core_features.py  test_data_types.py  test_system_interaction.py
